# eo_BE

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  MEMORY.md  ORCHESTRATION.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_bgm_matcher.py
.claude/: settings.json
.claude/commands/: api-gen.md  aws-audit.md  db-migrate.md  deploy-check.md  monitor.md  next-task.md  perf.md  qa.md  review.md  secret-scan.md  security.md  ship.md  test-gen.md  vuln-scan.md
.github/workflows/: deploy.yml
app/: main.py
app/api/: __init__.py  auth.py  character.py  custom_character.py  dashboard.py  project.py  storyboard.py  video.py  video_edit.py  ws.py  youtube.py
app/core/: config.py  database.py  deps.py  http_client.py  s3.py  security.py  timezone.py  trend_manager.py
app/schemas/: auth.py  character.py  custom_character.py  dashboard.py  project.py  storyboard.py  video.py  video_edit.py  youtube.py
app/services/: auth.py  bgm_matcher.py  character.py  creation_trend.py  custom_character.py  dashboard.py  idea_enrichment.py  project.py  prompt_optimizer.py  storyboard.py  subtitle_recommender.py  trending.py  tts.py  video.py  video_edit.py  video_edit_render.py  video_generation.py  video_merge.py  youtube.py
prisma/: schema.prisma  seed.py
prisma/migrations/: add_bgm_preset.sql  add_enriched_idea.sql  (+2 more)
scripts/: entrypoint.sh  setup-https.sh  upload_characters.py
tests/: conftest.py  test_auth.py  test_character.py  test_dashboard.py  test_health.py  test_prompt_optimizer.py  test_video_service.py
(+11 files in other folders)
