[project]
name = "eo-backend"
version = "0.1.0"
description = "EO Backend API"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]
ignore = ["UP017", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105"]
"app/core/config.py" = ["S105"]
"app/core/security.py" = ["S105"]
"app/schemas/auth.py" = ["S105"]
"app/services/auth.py" = ["S110"]
"prisma/seed.py" = ["E501", "T201"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.bandit]
targets = ["app"]
exclude_dirs = ["tests"]
